Fixed overflow on new section

--- a/css/index.css
+++ b/css/index.css
@@ -30,6 +30,7 @@ body {
   padding-left: 7.5%;
   padding-right: 7.5%;
   padding-top: 70px;
+  padding-bottom: 35px;
 }
 
 .waitlist {
